# ossnap

./: README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/ossnap/: cli.py  config.py  crypto.py  exceptions.py  git.py  github.py  install.py  repos.py  ssh.py  ui.py
tests/: test_crypto.py  test_ssh.py
